--- a/sources/_VS/DeviceOSC/FPGA.vcxproj.filters
+++ b/sources/_VS/DeviceOSC/FPGA.vcxproj.filters
@@ -147,9 +147,6 @@
     <ClCompile Include="..\..\Device\src\Tester\Tester.cpp">
       <Filter>Tester</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Utils\Math.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTester.cpp">
       <Filter>Menu\Pages</Filter>
     </ClCompile>
@@ -166,6 +163,9 @@
       <Filter>Utils</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Device\src\Utils\Debug.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Device\src\Utils\MathOSC.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
@@ -305,9 +305,6 @@
     <ClInclude Include="..\..\Device\src\Tester\Tester.h">
       <Filter>Tester</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Device\src\Utils\Math.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device\src\dox\Page01.h">
       <Filter>dox</Filter>
     </ClInclude>
@@ -358,6 +355,12 @@
     </ClInclude>
     <ClInclude Include="..\..\libs\common\_VS\algorithm">
       <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\Utils\MathOSC.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\Utils\Math.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
